# tzbucket

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/discoverability/: github_discoverability.md  seo_keyword_clusters.md
.github/workflows/: ci.yml  release.yml
crates/tool-cli/: Cargo.toml
crates/tool-cli/src/: main.rs
crates/tool-cli/tests/: golden_tests.rs
crates/tool-core/: Cargo.toml
crates/tool-core/src/: lib.rs
crates/tzbucket-cli/: Cargo.toml
crates/tzbucket-cli/src/: bucket_cmd.rs  cli.rs  error.rs  explain_cmd.rs  main.rs  range_cmd.rs  shared.rs
crates/tzbucket-cli/tests/: golden_tests.rs
crates/tzbucket-core/: Cargo.toml
crates/tzbucket-core/src/: compute.rs  error.rs  lib.rs  models.rs  parse.rs  tz.rs
docs/: architecture.md  dst_etl_checklist.md  dst_notes.md  etl_integration.md  migrate_from_naive_grouping.md  output_format.md  spark_dst_bucketing.md  sql_date_trunc_dst_pitfalls.md
docs/specs/: spec_create_project.md
fixtures/: berlin_dst_end_2026.txt  berlin_dst_start_2026.txt  large_paragraph.txt  multiline_blank.txt  newyork_dst_end_2026.txt  newyork_dst_start_2026.txt  repeated_words.txt  unicode.txt
golden/: berlin_dst_end_2026.json  berlin_dst_start_2026.json  empty.json  explain_ambiguous_error.json  explain_ambiguous_first.json  explain_nonexistent_error.json  explain_nonexistent_shift.json  large_paragraph.json  multiline_blank.json  newyork_dst_end_2026.json  newyork_dst_start_2026.json  range_berlin_march_2026.json  repeated_words.json  simple.json  single_word.json  unicode.json  whitespace_only.json
scripts/: rename_tool.sh
