[package]
name = "tool-cli"
description = "CLI for wtools-template"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tool-cli"
path = "src/main.rs"

[dependencies]
tool-core = { path = "../tool-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
similar = "2"
