[package]
name = "tzbucket-cli"
description = "DST-safe time bucketing CLI tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tzbucket"
path = "src/main.rs"

[dependencies]
tzbucket-core = { path = "../tzbucket-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
similar = "2"
serde_json = "1.0"
